--- a/src/app/pages/listas/lista/lista.page.html
+++ b/src/app/pages/listas/lista/lista.page.html
@@ -1,48 +1,32 @@
 <app-navbar [title]="lista?.nombre || 'Detalle Lista'" [showBack]="true" [backUrl]="'/listas'"></app-navbar>
 
-<ion-content class="background-content">
-  <div class="overlay"></div>
-  <div class="content-wrapper contenido">
-    <ion-loading
-      *ngIf="loading"
-      message="Cargando lista..."
-      spinner="circles"
-    ></ion-loading>
+<ion-content class="ion-padding">
+  <ion-list lines="none" class="song-list">
+    <ng-container *ngFor="let section of sections">
+      <ion-item
+        class="song-header"
+        button
+        (click)="section.open = !section.open">
+        <ion-icon name="musical-notes-outline" slot="start" class="section-icon"></ion-icon>
+        <ion-label class="song-label">{{ section.name }}</ion-label>
+        <ion-icon slot="end" [name]="section.open ? 'chevron-up-outline' : 'chevron-down-outline'"></ion-icon>
+      </ion-item>
 
-    <div *ngIf="!loading && cancionesDisponibles()">
-      <ng-container *ngFor="let section of sections">
-        <ion-item
-          (click)="section.open = !section.open"
-          color="light"
-          lines="full"
-          class="list-header glass-item"
-        >
-          <ion-label>{{ section.name }}</ion-label>
-          <ion-icon
-            slot="end"
-            [name]="section.open ? 'chevron-up-outline' : 'chevron-down-outline'"
-          >
-          </ion-icon>
-        </ion-item>
-        <div *ngIf="section.open" @expandCollapse class="song-list">
-          <ion-list lines="none">
-            <ion-item
-              *ngFor="let song of section.songs"
-              class="list-item glass-song"
-              (click)="verCancion(song.id)"
-              @fadeInStagger
-            >
-              <!-- 👈 Aquí -->
-              <ion-label>{{ song.nombre }}</ion-label>
-            </ion-item>
-          </ion-list>
-        </div>
-      </ng-container>
-    </div>
+      <div *ngIf="section.open" class="song-content">
+        <ion-list lines="none">
+          <ion-item
+            *ngFor="let song of section.songs"
+            class="glass-song"
+            (click)="verCancion(song.id)">
+            <ion-label>{{ song.nombre }}</ion-label>
+          </ion-item>
+        </ion-list>
+      </div>
+    </ng-container>
+  </ion-list>
 
-    <div *ngIf="!loading && !cancionesDisponibles()" class="no-results">
-      <div class="emoji">😔</div>
-      <div class="message">No se encontraron canciones en esta lista</div>
-    </div>
+  <div *ngIf="!loading && !cancionesDisponibles()" class="no-results">
+    <div class="emoji">😔</div>
+    <div class="message">No se encontraron canciones en esta lista</div>
   </div>
 </ion-content>
