--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -3,20 +3,19 @@
 
     <!-- Botón de volver o espacio vacío -->
     <ion-buttons slot="start">
-      <ion-button *ngIf="showBack; else emptySpace" (click)="goBack()" class="navbar-button">
-        <ion-icon slot="icon-only" name="arrow-back-circle-outline"></ion-icon>
+      <ion-button *ngIf="showBack; else emptySpace" (click)="goBack()" class="navbar-back-button">
+        <ion-icon slot="icon-only" name="arrow-back-circle"></ion-icon>
       </ion-button>
       <ng-template #emptySpace>
-        <div style="width: 48px;"></div> <!-- 👈 Para que el menú esté a la derecha pero el title siga centrado -->
+        <div style="width: 48px;"></div>
       </ng-template>
     </ion-buttons>
-
+    
     <!-- Título centrado -->
     <ion-title class="navbar-title">{{ title }}</ion-title>
 
-    <!-- Botón menú SIEMPRE A LA DERECHA -->
     <ion-buttons slot="end">
-      <ion-menu-button class="navbar-button"></ion-menu-button>
+      <ion-menu-button class="navbar-menu-button"></ion-menu-button>
     </ion-buttons>
 
   </ion-toolbar>
