--- a/src/app/pages/listas/listas.page.html
+++ b/src/app/pages/listas/listas.page.html
@@ -1,17 +1,22 @@
 <app-navbar [title]="'Listas'" [showBack]="false"></app-navbar>
 
-<ion-content class="background-content">
+<ion-content fullscreen="true" class="background-content">
   <div class="overlay"></div>
   <div class="content-wrapper">
-
-    <ion-searchbar
-      [(ngModel)]="searchTerm"
-      (ionInput)="filterListas()"
-      placeholder="Buscar lista"
-      showClearButton="always">
-    </ion-searchbar>
-
-    <ion-loading *ngIf="loading" message="Cargando listas..." spinner="circles"></ion-loading>
+    <div class="searchbar-fixed">
+      <ion-searchbar
+        [(ngModel)]="searchTerm"
+        (ionInput)="filterListas()"
+        placeholder="Buscar lista"
+        showClearButton="always"
+      >
+      </ion-searchbar>
+    </div>
+    <ion-loading
+      *ngIf="loading"
+      message="Cargando listas..."
+      spinner="circles"
+    ></ion-loading>
 
     <div *ngIf="!loading && filteredListas.length === 0" class="no-results">
       <div class="emoji">😔</div>
@@ -24,11 +29,12 @@
           <span class="song-label">
             <b class="fas fa-list icon-musical-note"></b> {{ lista.nombre }}
           </span>
-          <br>
-          <small class="song-date">{{ lista.fecha | date: 'dd/MM/yyyy' }}</small>
+          <br />
+          <small class="song-date"
+            >{{ lista.fecha | date: 'dd/MM/yyyy' }}</small
+          >
         </div>
       </div>
     </div>
-
   </div>
 </ion-content>
