--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,3 +1,12 @@
+:host {
+  display: block;
+}
+
+ion-header {
+  padding-top: env(safe-area-inset-top);
+  padding-top: constant(safe-area-inset-top); // fallback para iOS <11.2
+}
+
 .glass-navbar {
   --background: rgba(255, 255, 255, 0.05);
   backdrop-filter: blur(8px);
