--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -28,13 +28,14 @@ ion-header {
     }
 
     ion-buttons {
+
       ion-button.navbar-button,
       ion-menu-button.navbar-button {
         --color: #ffffff;
         border-radius: 50%;
         padding: 12px; // ⬅️ más padding
         font-size: 24px;
-        width: 48px;   // ⬅️ botón más grande
+        width: 48px; // ⬅️ botón más grande
         height: 48px;
         display: flex;
         align-items: center;
@@ -58,5 +59,37 @@ ion-header {
   &.scrolled {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     --background: rgba(0, 0, 0, 0.3);
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  .glass-navbar {
+    --background: rgba(0, 0, 0, 0.05);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+
+    ion-toolbar {
+      --color: #111010; // texto oscuro
+
+      ion-title.navbar-title {
+        color: #111010;
+      }
+
+      ion-buttons {
+
+        ion-button.navbar-button,
+        ion-menu-button.navbar-button {
+          --color: #111010;
+        }
+
+        ion-button.navbar-button:hover,
+        ion-menu-button.navbar-button:hover {
+          background: rgba(0, 0, 0, 0.1);
+        }
+      }
+
+      ion-icon {
+        color: #111010;
+      }
+    }
   }
 }
