--- a/src/app/pages/listas/listas.page.scss
+++ b/src/app/pages/listas/listas.page.scss
@@ -108,10 +108,8 @@ ion-content.background-content {
   color: #cccccc;
 }
 
-ion-loading {
-  --spinner-color: white;
-  --background: rgba(0, 0, 0, 0.7);
-  --width: 200px;
-  --height: 200px;
-  text-align: center;
+::ng-deep .custom-loading .loading-wrapper {
+  background: rgba(0, 0, 0, 0.8);
+  color: white;
+  border-radius: 12px;
 }
