--- a/src/app/pages/listas/listas.page.scss
+++ b/src/app/pages/listas/listas.page.scss
@@ -113,3 +113,7 @@ ion-content.background-content {
   color: white;
   border-radius: 12px;
 }
+.icon-musical-note {
+  color: white;
+  margin-right: 8px;
+}
